--- a/src/components/Layouts/Header/Header.module.scss
+++ b/src/components/Layouts/Header/Header.module.scss
@@ -7,12 +7,14 @@
 .Header {
   height: 80px;
   width: 100%;
-  background-color: transparent;
+  //background-color: transparent;
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
   padding: 0 4%;
+  position: relative;
+  z-index: 100;
 }
 
 .Header.Sticky {
